[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemies/cannon/bubble.gd" type="Script" id=1]
[ext_resource path="res://art/bubble.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="Animation" id=2]
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.37842, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:self_modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
loop = true
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.51, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.1, 2 ), Vector2( 2, 2.1 ), Vector2( 2.1, 2 ) ]
}

[node name="bubble" type="RigidBody2D"]
mode = 1
mass = 8.0
custom_integrator = true
contacts_reported = 2
contact_monitor = true
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "wobble"
anims/appear = SubResource( 2 )
anims/burst = SubResource( 3 )
anims/wobble = SubResource( 4 )

[node name="player" type="AudioStreamPlayer2D" parent="."]

[node name="sprox" type="VisibilityNotifier2D" parent="."]

[node name="burst" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="screen_entered" from="sprox" to="." method="_on_enter_screen"]
[connection signal="screen_exited" from="sprox" to="." method="_on_exit_screen"]
[connection signal="timeout" from="burst" to="." method="_on_timeout"]
